# IncludeSpdlog

./: .gitignore  CMakeLists.txt
